IC-Test/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Rolling90DaySales__c</fullName>
        <label>XX Rolling 90 Days Sales</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rolling90DaysGMDollars__c</fullName>
        <label>XX Rolling 90 Days $GM</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RollingPrevious90DaysSales__c</fullName>
        <label>XX Rolling Previous Year 90 Days Sales</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RollingPreviousYr12MoGM__c</fullName>
        <description>10/19/2005 - Eli - changed length to 11,2 to match source data from DCS.</description>
        <label>XX Rolling 13 - 24 Month $GM</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RollingPreviousYr12MoSales__c</fullName>
        <description>10/19/2005 - Eli - changed length to 11,2 to match source data from DCS.</description>
        <label>XX Rolling 13 - 24 Month Sales</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RollingPreviousYr90DaysGM__c</fullName>
        <label>XX Rolling Previous Year 90 Days $GM</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SICCode1__c</fullName>
        <label>SIC Code 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICCode2__c</fullName>
        <label>SIC Code 2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICCode3__c</fullName>
        <label>SIC Code 3</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICIndustryGroupCode1__c</fullName>
        <label>SIC Industry Group Code 1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICIndustryGroupCode2__c</fullName>
        <label>SIC Industry Group Code 2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICIndustryGroupCode3__c</fullName>
        <label>SIC Industry Group Code 3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICIndustryGroupName1__c</fullName>
        <label>SIC Industry Group Name 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICIndustryGroupName2__c</fullName>
        <label>SIC Industry Group Name 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICIndustryGroupName3__c</fullName>
        <label>SIC Industry Group Name 3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICName1__c</fullName>
        <label>SIC Name 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICName2__c</fullName>
        <label>SIC Name 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICName3__c</fullName>
        <label>SIC Name 3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SIC Mapping</label>
        <referenceTo>SIC_Mapping__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesAsOfHidden__c</fullName>
        <defaultValue>IF( $RecordType.Name = &quot;Ship To&quot;,&quot;N/A&quot;,&quot;&quot;)</defaultValue>
        <description>Formatted during integration, as &quot;MMMMMMM DD, YYYY&quot; based on Accounting Period brought over with the Acorn sales data.  This is never viewed directly, but used in a workflow formula to create the Rich Text &quot;bold&quot; version of this field</description>
        <label>Sales As Of - Hidden</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesAsOf__c</fullName>
        <description>value is only set via workflow, when the hidden version of this field is updated by integration (when the Acorn sales data changes to a new period)</description>
        <label>Sales As Of</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SalesContactName__c</fullName>
        <description>If this information is wrong, you must correct it in UVX.</description>
        <label>Sales Contact Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesContactPhoneNumber__c</fullName>
        <description>10/19/2005 - Eli - changed length to 12 to match source data from DCS.</description>
        <label>Sales Contact Phone Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesHierarchyTitle__c</fullName>
        <description>Evaluated as a formula rather than populated via integration. Next time we do a major integration change we can change to come from integration, from CC134.</description>
        <formula>CASE( TerritoryTypeCode__c ,
&apos;A&apos;, &apos;ACCOUNT MANAGER&apos;,
&apos;B&apos;, &apos;INDUSTRY MANAGER&apos;,
&apos;C&apos;, &apos;CORPORATE ACCOUNT MANAGER&apos;,
&apos;D&apos;, &apos;ENERGY IND SPECIALIST&apos;,
&apos;E&apos;, &apos;GENERAL MANAGER&apos;,
&apos;F&apos;, &apos;BUSINESS DEVELOPMENT EXECUTIVE&apos;,
&apos;G&apos;, &apos;BUSINESS DEVELOPMENT REPRESENTAT&apos;,
&apos;H&apos;, &apos;UNIVAR USA INC&apos;,
&apos;I&apos;, &apos;ACCOUNT REPRESENTATIVE&apos;,
&apos;J&apos;, &apos;MINI BULK TERR MGR&apos;,
&apos;K&apos;, &apos;MINI BULK SALES MGR&apos;,
&apos;L&apos;, &apos;TECHNICAL SPECIALIST&apos;,
&apos;M&apos;, &apos;SALES MANAGER&apos;,
&apos;O&apos;, &apos;SALES REPRESENTATIVE&apos;,
&apos;P&apos;, &apos;PHARMACEUTICAL SPECIALIST&apos;,
&apos;R&apos;, &apos;SALES AGENT&apos;,
&apos;T&apos;, &apos;SALES REPRESENTATIVE&apos;,
&apos;U&apos;, &apos;UNIVAR USA INC&apos;,
&apos;W&apos;, &apos;SALES REPRESENTATIVE&apos;,
&apos;X&apos;, &apos;SALES REPRESENTATIVE&apos;,
&apos;&apos;)</formula>
        <inlineHelpText>Title assigned to this Salesrep Type. From DCS Code Category 134.</inlineHelpText>
        <label>Sales Hierarchy Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesMgrID__c</fullName>
        <description>Derived from UVX: Read CC115 for Sales Rep, look at &quot;NDS1&quot; column value (like 4SEH). Look for that same value in CC 135, then look at the &quot;LEAD&quot; column --&gt; this is the Sales Manager Id.  If you add an &quot;i&quot; in front it&apos;ll correspond to the SM&apos;s user alias in SFDC, if the SM is set up in SFDC.</description>
        <inlineHelpText>Sales Manager ID from UVX</inlineHelpText>
        <label>Sales Mgr ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesMgrName__c</fullName>
        <description>Derived from UVX: CC115 for Sales Rep, look at &quot;NDS1&quot; column value (like 4SEH). Look for that same value in CC 135, then look down the &quot;LEAD&quot; column. This is the user ID of the OSR&apos;s Sales Manager. Get name for the user ID by looking in CC 999 for that user ID.
2013-09-11 - Removed &apos;Name&apos; from field label per Rian Titus&apos; request</description>
        <inlineHelpText>Populated by CC 115 and CC 135 values from UVX.  For changes, contact your Regional or District Admin Manager to update the values in the UVX.</inlineHelpText>
        <label>Sales Mgr</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOfficeCode__c</fullName>
        <label>Sales Office Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOfficeName__c</fullName>
        <label>Sales Office Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRepID__c</fullName>
        <description>3-character Customer Primary SalesRep ID from DCS. The other similar field, DCS Owner Code, converts numeric House Acct IDs into the generic HAxxx code. This field keeps the 3-char format, allowing reporting on speciific DCS House Account codes.</description>
        <label>Sales Rep ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRepName__c</fullName>
        <description>Description for this SalesRep Id, from CC115 on the UVX. Usually the same as Account Owner name, except for house accounts.</description>
        <label>Sales Rep Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentationPriority__c</fullName>
        <description>5/5/2010 - KM - DELETE this as soon as someone knows how to recompile the Sample Request proxy with modified WSDL.  In meantime, s/b visible only to the SFDC Proxy&apos;s profile.</description>
        <label>XX Segmentation Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SegmentationValue__c</fullName>
        <description>5/5/2010 - KM - DELETE this as soon as someone knows how to recompile the Sample Request proxy with modified WSDL.  In meantime, s/b visible only to the SFDC Proxy&apos;s profile.</description>
        <label>XX Segmentation Value</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SellToAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>you have multiple Account records for this customer but this is the one you use for Contacts, Activities, Opportunities, etc, mark this as the Sell-to Account.</inlineHelpText>
        <label>Sell-To Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceBranch__c</fullName>
        <description>10/19/2005 - Eli - changed length to 25 to match source data from DCS.</description>
        <label>Service Branch</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Branch_Code__c</fullName>
        <label>Service Branch Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipTermCode__c</fullName>
        <label>Ship Term Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToName__c</fullName>
        <label>Ship To Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToNumber__c</fullName>
        <label>Ship To</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipViaCode__c</fullName>
        <label>Ship Via Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipViaName__c</fullName>
        <description>5/5/2010 - KM - DELETE this as soon as someone knows how to recompile the Sample Request proxy with modified WSDL.  In meantime, s/b visible only to the SFDC Proxy&apos;s profile.</description>
        <label>XX Ship Via</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingAccountNumber__c</fullName>
        <label>Sample Request Shipping Account #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCompany__c</fullName>
        <label>Sample Request Shipping Co</label>
        <picklist>
            <picklistValues>
                <fullName>DHL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShippingFax__c</fullName>
        <description>This is to replace the standard SFDC Fax number field.
Feb. 22 2005</description>
        <label>Shipping Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ShippingPhone__c</fullName>
        <description>Feb. 22 2005</description>
        <label>Shipping Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ShippingStreetMultiLine__c</fullName>
        <defaultValue>&quot;Y&quot;</defaultValue>
        <description>Hidden from all but integration user. Set in integration to indicate street is only one line. Used in google maps formula field, which can&apos;t handle multi-line streets.</description>
        <label>Shipping Street MultiLine</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateEPANumber1__c</fullName>
        <label>State EPA Number 1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateEPANumber2__c</fullName>
        <label>State EPA Number 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <description>5/5/2010 - KM - DELETE this as soon as someone knows how to recompile the Sample Request proxy with modified WSDL.  In meantime, s/b visible only to the SFDC Proxy&apos;s profile.</description>
        <label>XX Strengths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEMPBillingStateLength__c</fullName>
        <description>Used temporarily for state &amp; country code data cleanup</description>
        <formula>LEN( TEMPBillingStateShort__c )</formula>
        <label>TEMPBillingStateLength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMPBillingStateMismatch1__c</fullName>
        <formula>RecordType.Name = &quot;Ship To&quot; &amp;&amp; (IntegratedBillingStateCd__c &lt;&gt; text(BillingStateCode))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TEMPBillingStateMismatch1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMPBillingStateMismatch__c</fullName>
        <formula>RecordType.Name = &quot;Ship To&quot; &amp;&amp; (IntegratedBillingCtryCd__c &lt;&gt;text(BillingCountryCode) ||  IntegratedBillingStateCd__c &lt;&gt; text(BillingStateCode))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TEMPBillingStateMismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMPBillingStateShort__c</fullName>
        <description>temporary for data cleanup. DemandTools will set to the short version of the state. If blank, and state is not blank, this indicates an invalid state that needs to be cleaned up.</description>
        <label>TEMPBillingStateShort</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMPShippingStateLength__c</fullName>
        <description>Used temporarily for state &amp; country data cleanup</description>
        <formula>LEN( TEMPShippingStateShort__c )</formula>
        <label>TEMPShippingStateLength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMPShippingStateShort__c</fullName>
        <description>temporary for data cleanup. DemandTools will set to the short version of the state. If blank, and state is not blank, this indicates an invalid state that needs to be cleaned up.</description>
        <label>TEMPShippingStateShort</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTM_Closed_Lost__c</fullName>
        <description>Excludes Obsolete</description>
        <label>TTM Closed Lost</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.FalloutReason__c</field>
            <operation>notEqual</operation>
            <value>Obsolete</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TTM_Closed_Won_Opportunities__c</fullName>
        <description>Sum of Est. Sales from all CW opportunities</description>
        <label>TTM Closed Won Opportunities</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TargetAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaxExemptCertNumber__c</fullName>
        <label>Tax Exempt Cert. Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxExemptExpDate__c</fullName>
        <label>Tax Exempt Exp. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaxIndicator__c</fullName>
        <label>Tax Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnicalContactName__c</fullName>
        <label>Technical Contact Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnicalContactPhone__c</fullName>
        <label>Technical Contact Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerritoryTypeCode__c</fullName>
        <description>10/19/2005 - Eli - changed length to 1 to match source data from DCS.
9/13/2007 - Kathy - changed field label to match UVX Code Catgy 134 (part of CR to fix Sales Hierarchy data)</description>
        <label>Sales Rep Type Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerritoryTypeName__c</fullName>
        <description>9/13/2007 - Kathy - changed field label to match UVX Code Catgy 134 (part of CR to fix Sales Hierarchy data)</description>
        <label>Sales Rep Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>5/5/2010 - KM - DELETE this as soon as someone knows how to recompile the Sample Request proxy with modified WSDL.  In meantime, s/b visible only to the SFDC Proxy&apos;s profile.</description>
        <label>XX Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1 - Economic margin positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2 - Economic margin negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3 - Operating margin negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 4 - Economic contribution margin negative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalChemicalSpend__c</fullName>
        <description>This field was requested by Corporate Accounts during the first prototype review on Feb. 18 2005.  This may or may not be viable.</description>
        <label>Total Chemical Spend</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Count_Opportunities__c</fullName>
        <description>Total count of Opportunities for this account.</description>
        <label>Total # of Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Open_Opportunities__c</fullName>
        <description>Sum of Est. Sales from all open opportunities</description>
        <label>Total Open Opportunities</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Turnover__c</fullName>
        <description>Account Allocation - Turnover Date
Editable by SMs and GMs
Readable by Contact Center Mgrs, global exec types</description>
        <label>Turnover</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UIC_Industry_Group__c</fullName>
        <label>UIC Industry Group</label>
        <picklist>
            <picklistValues>
                <fullName>1 - SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - PEST CONTROL MGMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - PHARMACEUTICAL-UNIVAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - PERSONAL CARE-UNIVAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - OIL FIELD SERVICES-UNIVAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - LUBRICANTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - OTHER INDUSTRY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A - AGRICULT,FORESTRY,FISHING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B - MINING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - ENERGY SECTOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - CONSTRUCTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E - FOOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - TEXTILE &amp; APPAREL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G - LUMBER &amp; WOOD PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H - FURNITURE &amp; FIXTURES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I - PAPER &amp; ALLIED PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K - CHEMICAL PRODUCERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L - HOUSEHLD &amp; INDUST CLEANRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N - COATINGS, INK &amp; ADHESIVES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P - RUBBER &amp; PLASTICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q - METAL &amp; METAL FINISHING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R - MACHINERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T - ELEC EQUIP &amp; ELECTRONICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V - MISC MANUFACTURING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W - TRANSPORTATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y - UTILITIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z - WHOLESALE &amp; RETAIL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UltimateDunsNumber__c</fullName>
        <label>Ultimate Duns #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UltimateName__c</fullName>
        <description>DUNS Ultimate Name.</description>
        <label>Ultimate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent_Name__c</fullName>
        <formula>InSituCah__Ultimate_Parent__r.InSituCah__Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ultimate Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnivarARID__c</fullName>
        <description>Unique Identifier for each account record.  Better than native AccountId when using in Excel formulas that aren&apos;t case-sensitive.</description>
        <displayFormat>AR{000000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Unique Identifier for each account record.</inlineHelpText>
        <label>UnivarARID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>UnivarIndustryCodeSIC4__c</fullName>
        <label>XX SIC Code 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnivarIndustryNameSIC4__c</fullName>
        <label>XX SIC Name 4</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnivarPotential__c</fullName>
        <label>Univar Potential $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Univar_Strategy__c</fullName>
        <description>5/5/2010 - KM - DELETE this as soon as someone knows how to recompile the Sample Request proxy with modified WSDL.  In meantime, s/b visible only to the SFDC Proxy&apos;s profile.</description>
        <label>XX Univar Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UserLastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to last non-System Admin to modify this Account. Modifiable by Apex only.</description>
        <label>User Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserLastModifiedDate__c</fullName>
        <description>When the last non-admin user modified this record.</description>
        <label>User Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WaiveDeposit__c</fullName>
        <label>Waive Deposit</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <description>5/5/2010 - KM - DELETE this as soon as someone knows how to recompile the Sample Request proxy with modified WSDL.  In meantime, s/b visible only to the SFDC Proxy&apos;s profile.</description>
        <label>XX Weaknesses</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AcctsmodifiedbyIntegration</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>sfdci</value>
        </filters>
        <label>X:Modified by Integration-BIS View ONLY</label>
        <language>en_US</language>
        <sharedTo>
            <group>GBASSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllCustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ShipToName__c</columns>
        <columns>SellToAccount__c</columns>
        <columns>CustomerNumber__c</columns>
        <columns>ShipToNumber__c</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>RegionName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ShipTo,Account.Prospect</value>
        </filters>
        <label>All Customers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllShipToAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CustomerStatus__c</columns>
        <columns>DepartmentName__c</columns>
        <columns>SellToAccount__c</columns>
        <columns>CustomerNumber__c</columns>
        <columns>ShipToNumber__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>AcornRolling12MoSales__c</columns>
        <columns>AcornTotSalesPYTD__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ShipTo</value>
        </filters>
        <label>All Ship-To Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>RegionName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Prospect</value>
        </filters>
        <label>All Prospects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Alltesting</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>0BCM00000004CRW</columns>
        <columns>0BCM00000004CRX</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>CustomerShipTo__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UserLastModifiedBy__c</columns>
        <columns>UserLastModifiedDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>*** All for Univar GeoLoc testing</label>
        <language>en_US</language>
        <sharedTo>
            <group>GBAS</group>
            <group>GBASSupport</group>
            <group>MarketDevelopmentGroup</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAMPAAcctsISView</fullName>
        <columns>GroupAccountNumber__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>GroupAccountType__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>RegionCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GroupAccountNumber__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Corporate</value>
        </filters>
        <label>X:CA/MPA Accts (IS View)</label>
        <language>en_US</language>
        <sharedTo>
            <group>GBASSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAMPAAcctswithRollupISView</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>GroupAccountNumber__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>GroupAccountType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GroupAccountNumber__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>X:CA/MPA Accts with Rollup (IS View)</label>
        <language>en_US</language>
        <sharedTo>
            <group>GBASSupport</group>
        </sharedTo>
    </listViews>
</CustomObject>